[package]
name = "example"
version = "0.1.0"
authors = ["Mykyta Holubakha <hilobakho@gmail.com>"]
edition = "2018"
build = false


[dependencies]
juniper = "0.10"
juniper_rocket = "0.2.0"
bincode = "1.0.1"
byteorder = "1.2.7"
sled = "0.16.4"
pagecache = "0.7.6"
lazy_static = "1.2.0"
rocket = "0.4.0-rc.2"
rocket_contrib = "0.4.0-rc.2"
serde = "1.0.80"
serde_derive = "1.0.80"
rand = "0.6.0"
rocket_cors = "0.4.0-rc.2"
serde_json = "1.0.33"
problem = { version = "0.1.2", git = "https://github.com/Hummer12007/problem-rs" }
problem_derive = { version = "0.1.2", git = "https://github.com/Hummer12007/problem-rs" }
#jsonrpc-macros = "9.0.0"

[build-dependencies]
#mml = "0.1.41"
